--- a/yaml/deployments/deployment-runner.yaml
+++ b/yaml/deployments/deployment-runner.yaml
@@ -3,8 +3,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jsplayground-runner-deployment
-  labels:
-    app: nginx
 spec:
   replicas: 2
   selector:
@@ -19,11 +17,18 @@ spec:
     spec:
       containers:
         - name: runner
-          image: jsplayground/runner:latest
+          image: maxtho/jsplayground:runner
           ports:
             - containerPort: 8081
+          resources:
+            limits:
+              cpu: 1
+              memory: 1Gi
+            requests:
+              cpu: 1
+              memory: 1Gi
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: jsplayground-runner-service
