--- a/yaml/policies/network-jsplayground.yaml
+++ b/yaml/policies/network-jsplayground.yaml
@@ -20,6 +20,15 @@ spec:
       ports:
         - protocol: TCP
           port: 8081
+    - to:
+        - ipBlock:
+            cidr: 0.0.0.0/0
+      ports:
+        - protocol: TCP
+          port: 53
+        - protocol: UDP
+          port: 53
+
 ---
 # Runner can only accept traffic from webapp
 apiVersion: networking.k8s.io/v1
